styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.react-clock__face {
  /* border: 2px solid #ccc !important; */
  /* biome-ignore lint/complexity/noImportantStyles: override react-clock library styles */
  border: none !important;
  /* biome-ignore lint/complexity/noImportantStyles: override react-clock library styles */
  background-color: #1f1f1f !important;
}

.react-clock__hand__body {
  border-radius: 20%;
  /* biome-ignore lint/complexity/noImportantStyles: override react-clock library styles */
  background-color: #ccc !important;
}

@media (prefers-color-scheme: dark) {
  .react-clock__face {
    background: #111;
  }
}

:root {
  --size: 50vmin;
  --white: #fff;
  --blue: #3051f1;
  --purple: #c92bb7;
  --red: #f73344;
  --orange: #fa8e37;
  --yellow: #fcdf8f;
  --yellow_to: #fbd377;
}

* {
  box-sizing: border-box;
}

